[gd_scene load_steps=31 format=3 uid="uid://be3pnj5onpfin"]

[ext_resource type="Script" path="res://game_hud.gd" id="1_jl2e5"]
[ext_resource type="PackedScene" uid="uid://dvvtn0102djbo" path="res://general/mute_button.tscn" id="1_nou5r"]
[ext_resource type="PackedScene" uid="uid://ckugnyx88umid" path="res://general/player_health.tscn" id="3_0ws11"]
[ext_resource type="Texture2D" uid="uid://crhws4g5r8prh" path="res://art/misc/menu.png" id="3_5yac2"]
[ext_resource type="PackedScene" uid="uid://da2qdynvsop07" path="res://game_over_screen.tscn" id="4_r3yx1"]
[ext_resource type="Texture2D" uid="uid://bm4maju0f733n" path="res://art/coin.png" id="5_xqipu"]
[ext_resource type="FontFile" uid="uid://nf5wnen7byh5" path="res://art/font/upheaval/upheavtt.ttf" id="6_nqeuc"]
[ext_resource type="PackedScene" uid="uid://bjqeknaomhnba" path="res://general/killcount_g.tscn" id="7_tja4w"]
[ext_resource type="PackedScene" uid="uid://pye3lymjy8ky" path="res://general/inventory.tscn" id="8_7m88t"]
[ext_resource type="AudioStream" uid="uid://gyekham7j1ij" path="res://music/collect.wav" id="9_ops20"]
[ext_resource type="Texture2D" uid="uid://bu8t2h6vpjo8f" path="res://art/Player Art/arrow.png" id="10_o36cw"]
[ext_resource type="Texture2D" uid="uid://dier36a3dmis" path="res://art/misc/spacebar.png" id="12_14nk3"]
[ext_resource type="Texture2D" uid="uid://c5num5vcy1txr" path="res://art/arrow/iron arrow.png" id="12_if1a4"]
[ext_resource type="FontFile" uid="uid://btcd7jlbsnohb" path="res://art/font/Born2bSportyV10.ttf" id="13_fd44j"]
[ext_resource type="Texture2D" uid="uid://dxts6spl8tvt3" path="res://art/misc/wasd.png" id="13_vxy7y"]
[ext_resource type="Texture2D" uid="uid://bqne6cawbu074" path="res://art/misc/shift.jpg" id="15_v6gqu"]
[ext_resource type="PackedScene" uid="uid://cor0c34w07xx1" path="res://end_screen.tscn" id="17_o8swj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w2cqi"]
bg_color = Color(0.172549, 0.172549, 0.172549, 0.235294)

[sub_resource type="InputEventAction" id="InputEventAction_4rmpy"]
action = &"menu"

[sub_resource type="Shortcut" id="Shortcut_1wsp2"]
events = [SubResource("InputEventAction_4rmpy")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_njrsr"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.4, 0.290196, 0.101961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ed1sp"]
bg_color = Color(1, 0.352941, 0.141176, 0)

[sub_resource type="InputEventAction" id="InputEventAction_islaw"]
action = &"menu"

[sub_resource type="Shortcut" id="Shortcut_wpgax"]
events = [SubResource("InputEventAction_islaw")]

[sub_resource type="FontVariation" id="FontVariation_gebma"]
base_font = ExtResource("13_fd44j")

[sub_resource type="FontVariation" id="FontVariation_6cfyf"]
base_font = ExtResource("6_nqeuc")
spacing_glyph = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fgj28"]
bg_color = Color(0.0862745, 0.0862745, 0.0862745, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.286275, 0.196078, 0.0509804, 1)
expand_margin_right = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eiij4"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.372549, 0.262745, 0.0156863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oict3"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_color = Color(0.00392157, 0.00392157, 0.00392157, 1)
shadow_size = 190

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8q4as"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource("1_jl2e5")

[node name="Panel" type="Panel" parent="."]
offset_right = 1920.0
offset_bottom = 112.0
theme_override_styles/panel = SubResource("StyleBoxFlat_w2cqi")

[node name="MuteButton" parent="." instance=ExtResource("1_nou5r")]
offset_left = 1742.0
offset_top = 22.0
offset_right = 1816.0
offset_bottom = 96.0

[node name="MenuButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 1831.0
offset_top = 26.0
offset_right = 1863.0
offset_bottom = 59.0
scale = Vector2(1.8, 1.8)
shortcut = SubResource("Shortcut_1wsp2")
texture_normal = ExtResource("3_5yac2")

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = 1842.0
offset_top = 83.0
offset_right = 1882.0
offset_bottom = 114.0
theme_override_fonts/font = ExtResource("13_fd44j")
theme_override_font_sizes/font_size = 30
text = "ESC"

[node name="Label2" type="Label" parent="."]
texture_filter = 1
offset_left = 1767.0
offset_top = 83.0
offset_right = 1790.0
offset_bottom = 114.0
theme_override_fonts/font = ExtResource("13_fd44j")
theme_override_font_sizes/font_size = 30
text = "M"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerHealth" parent="." instance=ExtResource("3_0ws11")]
texture_filter = 1

[node name="GameOverScreen" parent="." instance=ExtResource("4_r3yx1")]
layer = 4
visible = false

[node name="CoinDisplay" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(539, 62)
scale = Vector2(3, 3)
texture = ExtResource("5_xqipu")
metadata/_edit_group_ = true

[node name="CoinDisplay" type="Label" parent="CoinDisplay"]
texture_filter = 3
offset_left = 16.0
offset_top = -11.0
offset_right = 33.0
offset_bottom = 7.0
theme_override_fonts/font = ExtResource("6_nqeuc")
theme_override_font_sizes/font_size = 20
text = "0"
metadata/_edit_use_anchors_ = true

[node name="KillCount_G" parent="." instance=ExtResource("7_tja4w")]
offset_left = 862.0
offset_top = 22.0
offset_right = 902.0
offset_bottom = 62.0

[node name="Inventory" parent="." instance=ExtResource("8_7m88t")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -248.0
offset_top = -174.0
offset_right = -248.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 0

[node name="Collect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ops20")

[node name="ArrowDisplay" type="Sprite2D" parent="."]
position = Vector2(730, 58)
scale = Vector2(0.223958, 0.223958)
texture = ExtResource("10_o36cw")

[node name="ArrowDisplay" type="Label" parent="ArrowDisplay"]
texture_filter = 1
offset_left = 290.232
offset_top = -160.744
offset_right = 500.232
offset_bottom = 155.256
theme_override_fonts/font = ExtResource("6_nqeuc")
theme_override_font_sizes/font_size = 275
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Menu" type="Panel" parent="."]
process_mode = 2
visible = false
z_index = 2
offset_left = 137.0
offset_top = 155.0
offset_right = 1784.0
offset_bottom = 861.0
theme_override_styles/panel = SubResource("StyleBoxFlat_njrsr")

[node name="Lvl1Obj" type="Label" parent="Menu"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 143.0
offset_top = 101.0
offset_right = 715.0
offset_bottom = 600.0
theme_override_constants/line_spacing = 35
theme_override_fonts/font = ExtResource("13_fd44j")
theme_override_font_sizes/font_size = 50
text = "Objective:
 After speaking with the mayor, you were tasked to kill all the goblins to receive a reward that will help your journey."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lvl2Obj" type="Label" parent="Menu"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 143.0
offset_top = 101.0
offset_right = 715.0
offset_bottom = 600.0
theme_override_constants/line_spacing = 35
theme_override_fonts/font = ExtResource("13_fd44j")
theme_override_font_sizes/font_size = 50
text = "Objective:
Interacting with citizens, you find yourself looking for the doctor and helping him out. Do so carefully, as knights are on patrol."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lvl3Obj" type="Label" parent="Menu"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 143.0
offset_top = 63.0
offset_right = 715.0
offset_bottom = 646.0
theme_override_constants/line_spacing = 35
theme_override_fonts/font = ExtResource("13_fd44j")
theme_override_font_sizes/font_size = 50
text = "Objective:
Youâ€™ve made it to the enchanted forest, kill all the monsters so that you may reach the artifact. Be wary, a dragon controlled by the king protects the artifact."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ExitButton" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 1531.0
offset_top = 48.0
offset_right = 1592.0
offset_bottom = 75.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ed1sp")
shortcut = SubResource("Shortcut_wpgax")

[node name="Space" type="Sprite2D" parent="Menu"]
position = Vector2(1117, 167)
scale = Vector2(0.389583, 0.365773)
texture = ExtResource("12_14nk3")

[node name="wasd" type="Sprite2D" parent="Menu"]
position = Vector2(1117, 367)
scale = Vector2(0.555, 0.555)
texture = ExtResource("13_vxy7y")

[node name="Label" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 1366.0
offset_top = 147.0
offset_right = 1521.0
offset_bottom = 198.0
theme_override_fonts/font = SubResource("FontVariation_gebma")
theme_override_font_sizes/font_size = 50
text = "- Attack"

[node name="Label2" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 1366.0
offset_top = 367.0
offset_right = 1521.0
offset_bottom = 418.0
theme_override_fonts/font = SubResource("FontVariation_gebma")
theme_override_font_sizes/font_size = 50
text = "- Walk
"

[node name="Label3" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 1366.0
offset_top = 549.0
offset_right = 1521.0
offset_bottom = 600.0
theme_override_fonts/font = SubResource("FontVariation_gebma")
theme_override_font_sizes/font_size = 50
text = "- Dash
"

[node name="Shift" type="Sprite2D" parent="Menu"]
position = Vector2(1117, 582)
scale = Vector2(0.191875, 0.15369)
texture = ExtResource("15_v6gqu")

[node name="Level1" type="Label" parent="."]
visible = false
offset_left = -27.0
offset_top = -81.0
offset_right = 1925.0
offset_bottom = 522.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = SubResource("FontVariation_6cfyf")
theme_override_font_sizes/font_size = 100
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Level2" type="Label" parent="."]
visible = false
offset_left = -27.0
offset_top = -81.0
offset_right = 1925.0
offset_bottom = 522.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = SubResource("FontVariation_6cfyf")
theme_override_font_sizes/font_size = 100
text = "Level 2"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Level3" type="Label" parent="."]
visible = false
offset_left = -27.0
offset_top = -81.0
offset_right = 1925.0
offset_bottom = 522.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = SubResource("FontVariation_6cfyf")
theme_override_font_sizes/font_size = 100
text = "Level 3"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="Coin_collected" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = 1457.0
offset_top = 155.0
offset_right = 1881.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("6_nqeuc")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_fgj28")
text = "Gained +10 coins"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Coin_collected"]
position = Vector2(58, 53)
scale = Vector2(3.28125, 3.1875)
texture = ExtResource("5_xqipu")

[node name="Arrow_collected" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = 1457.0
offset_top = 274.0
offset_right = 1881.0
offset_bottom = 375.0
theme_override_fonts/font = ExtResource("6_nqeuc")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_fgj28")
text = "Gained +2 arrows"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Arrow_collected"]
position = Vector2(56, 51)
rotation = -0.689405
scale = Vector2(1.1875, 1.15357)
texture = ExtResource("12_if1a4")

[node name="CollectTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Story2" type="Node" parent="."]

[node name="Label" type="Label" parent="Story2"]
visible = false
offset_left = 377.0
offset_top = 766.0
offset_right = 1643.0
offset_bottom = 861.0
theme_override_fonts/font = ExtResource("6_nqeuc")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_eiij4")
text = "I need to speak with the king. "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Story2Timer" type="Timer" parent="Story2"]
wait_time = 3.0

[node name="Shadow" type="Panel" parent="."]
visible = false
offset_left = -27.0
offset_top = -119.0
offset_right = 2024.0
offset_bottom = 75.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oict3")

[node name="Shadow1" type="Panel" parent="."]
visible = false
offset_left = -27.0
offset_top = 935.0
offset_right = 2024.0
offset_bottom = 1133.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oict3")

[node name="Collected" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_right = 0.021
anchor_bottom = 0.03
offset_left = 1814.0
offset_top = 157.0
offset_right = 1847.68
offset_bottom = 170.6
theme_override_fonts/font = ExtResource("13_fd44j")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_8q4as")
text = "+10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D2" type="Sprite2D" parent="Collected"]
texture_filter = 1
position = Vector2(-64, 22)
scale = Vector2(3.28125, 3.1875)
texture = ExtResource("5_xqipu")

[node name="Collected2" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_right = 0.021
anchor_bottom = 0.03
offset_left = 1814.0
offset_top = 256.0
offset_right = 1847.68
offset_bottom = 269.6
theme_override_fonts/font = ExtResource("13_fd44j")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_8q4as")
text = "+2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D3" type="Sprite2D" parent="Collected2"]
position = Vector2(-64, 18)
rotation = -0.689405
scale = Vector2(1.1875, 1.15357)
texture = ExtResource("12_if1a4")

[node name="EndScreen" parent="." instance=ExtResource("17_o8swj")]
visible = false

[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Menu/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
[connection signal="timeout" from="CollectTimer" to="." method="_on_collect_timer_timeout"]
[connection signal="timeout" from="Story2/Story2Timer" to="." method="_on_story_2_timer_timeout"]
